[package]
name = "unsplash"
version = "0.1.0"
authors = ["faebser <fabian@esf-frei.ch>"]

[dependencies]
hyper = "0.11.7"
reqwest = "0.8.1"
serde = "1.0.23"
serde_json = "1.0.7"
serde_derive = "1.0.24"
rand = "0.3"
gio = "0.3.0"
glib = "0.4.0"
clap = "~2.31"

[profile.release] 
opt-level = 3 
lto = true 
debug = false
